<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/show_viral" android:title="@string/show_viral"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/change_view" android:title="@string/change_view"
        android:icon="@drawable/ic_grid"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/sort" android:title="@string/sort"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/window" android:title="@string/window"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/about" android:title="@string/about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
