<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.rojoxpress.gurallery.AboutActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/image_placeholder"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/primaryColor" />

        <TextView
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:id="@+id/version"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/develop"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="10dp"
            android:textColor="@color/primaryColor" />

        <TextView
            android:text="@string/dev_time"
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_developer"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primaryColor" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="José Carlos Hernández"
            android:autoLink="all"
            android:drawableLeft="@drawable/ic_person"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="josec.hernandezh@gmail.com"
            android:autoLink="all"
            android:drawableLeft="@drawable/ic_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="https://mx.linkedin.com/pub/jose-carlos-hernandez/3a/724/56b"
            android:autoLink="all"
            android:drawableLeft="@drawable/linkedin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="20dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/developer_info"
            android:autoLink="all"
            android:drawableLeft="@drawable/ic_emoji"/>



    </LinearLayout>
</ScrollView>

